minor style changes

--- a/src/app/pages/post-layout-page/post-layout-page.component.scss
+++ b/src/app/pages/post-layout-page/post-layout-page.component.scss
@@ -19,6 +19,11 @@
 
     .default-input {
       width: 200px;
+
+      &:focus {
+        box-shadow: none;
+        border-color: dimgrey;
+      }
     }
 
     select {
