Calc button restyled

--- a/src/app/pages/post-layout-page/post-layout-page.component.html
+++ b/src/app/pages/post-layout-page/post-layout-page.component.html
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <button class="btn btn-light"
+    <button class="btn btn-light calculate-button"
             [disabled]="calculationDisabled()"
             (click)="calculate()">
       <span>Calculate</span>
