--- a/src/app/pages/post-layout-page/post-layout-page.component.html
+++ b/src/app/pages/post-layout-page/post-layout-page.component.html
@@ -49,7 +49,7 @@
               <div class="form-input">
                 <span>Location:</span>
                 <input class="form-control default-input"
-                       [formControlName]="obstructionControls.horLocation"
+                       [formControlName]="obstructionControls.location"
                        type="number">
               </div>
               <div class="form-input">
@@ -83,6 +83,7 @@
   <div class="view-container">
     <app-layout-view
     [postLayout]="selectedOption"
+    [postSize]="form.get(controls.postSize).value"
     [obstructions]="currObstructions">
     </app-layout-view>
   </div>
