options description added

--- a/src/app/pages/post-layout-page/post-layout-page.component.html
+++ b/src/app/pages/post-layout-page/post-layout-page.component.html
@@ -99,6 +99,15 @@
             (click)="onNextOption()">
       <span>&rArr;</span>
     </button>
+
+    <div class="layout-description" *ngIf="selectedOption">
+      <p>
+        {{getDescription(selectedOption.description)}}
+      </p>
+      <p>
+        Corner to corner: {{getCenterToCenterLength(selectedOption) | json}}
+      </p>
+    </div>
   </div>
 </div>
 
