--- a/src/app/pages/post-layout-page/post-layout-page.component.scss
+++ b/src/app/pages/post-layout-page/post-layout-page.component.scss
@@ -105,4 +105,19 @@
   top: 16px;
   display: flex;
   gap: 4px;
+
+  .btn {
+    height: 32px;
+    align-self: flex-start;
+  }
+}
+
+.layout-description {
+  margin-left: 8px;
+  font-size: 12px;
+  color: #696969;
+
+  p {
+    margin-bottom: 2px;
+  }
 }
